# tauri-pack

./: .gitignore  LICENSE
scripts/: generate-icons.ps1
src-tauri/: Cargo.toml  tauri.conf.ariang.json  tauri.conf.hexed.json  tauri.conf.json
src-tauri/src/: main.rs
